Updated report name-03-11-2025

--- a/CV_ManagementSystem/Reports/ReportFullTemp.rdlc
+++ b/CV_ManagementSystem/Reports/ReportFullTemp.rdlc
@@ -1948,7 +1948,9 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
+                              <Label>Exp_JobDescription</Label>
                               <Value>=Fields!JobDescription.Value</Value>
+                              <MarkupType>HTML</MarkupType>
                               <Style>
                                 <FontFamily>Sofia Pro Regular</FontFamily>
                               </Style>
